<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <EditText
        android:id="@+id/edit_book_name"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_book_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_price"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_book_price"
        android:inputType="number" />
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/edit_quantity"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_book_quantity"
        android:inputType="number" />
    <Button
        android:id="@+id/button_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:drawableTop="@drawable/plus"/>

</LinearLayout>


    <EditText
        android:id="@+id/edit_supplier_name"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_book_supplier"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/edit_supplier_phone"
        style="@style/EditorFieldStyle"
        android:hint="@string/hint_book_supplier_phone"
        android:inputType="textCapWords" />

</LinearLayout>